add recommendations
