# src/main/java/ru/egot/diplom/workout/dto/plan/training/api/TrainingApiResponse.java
@@ -1,0 +1,24 @@
+package ru.egot.diplom.workout.dto.plan.training.api;
+
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import lombok.Setter;
+
+@RequiredArgsConstructor
+@Getter
+@Setter
+public class TrainingApiResponse {
+
+    private String name;
+
+    private String type;
+
+    private String muscle;
+
+    private String equipment;
+
+    private String difficulty;
+
+    private String instructions;
+
+}
